# flowDenoiser

./: CMakeLists.txt  README.md  flowDenoiser.ini  flowDenoiser.xml
app/: CMakeLists.txt
app/conf/: flowDenoiser.ini
app/scripts/: flowDenoiserAPP.xml
include/: flowDenoiser.h
src/: flowDenoiser.cpp  main.cpp
